REGRESSION(r250597): [GTK][WPE] 2.27.1 shows HTML content as text/plain in custom protocols when passing a charset in content type https://bugs.webkit.org/show_bug.cgi?id=202633

Reviewed by Žan Doberšek.

Source/WebKit:

This is a regression of the switch to use the new custom protocols implementation. Before r250597, we extracted
the mime type and charset from content type in the network process, but we are now sending the response directly
from the UI process, so we need to do that when building our response. Rename the mime_type parameter as
content_type to avoid confusion, since it's documented as the content type.

* UIProcess/API/glib/WebKitURISchemeRequest.cpp:
(webkitURISchemeRequestReadCallback):
(webkit_uri_scheme_request_finish):
* UIProcess/API/gtk/WebKitURISchemeRequest.h:
* UIProcess/API/wpe/WebKitURISchemeRequest.h:

Tools:

Add a test case.

* TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebContext.cpp:
(testWebContextURIScheme):

Canonical link: https://commits.webkit.org/216196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250899 268f45cc-cd09-0410-ab3c-d52691b4dbfc